--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>Welcome to my labcase!</p>
         <p>Here are some ideas I've been tweaking with. Take whatever you find useful!</p>
         <section>
-          <h2><a href="/shapes">Shapes</a></h2>
+          <h2><a href="shapes">Shapes</a></h2>
           <p>Keys</p>
           <ul>
             <li>CSS Transform</li>
