favicon and font

--- a/index.html
+++ b/index.html
@@ -2,26 +2,35 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labcase</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Labcase</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-    <header>
-      <h1>¡Hola!</h1>
-    </header>
-    <main class="container">
-        <p>Welcome to my labcase!</p>
-        <p>Here are some ideas I've been tweaking with. Take whatever you find useful!</p>
-        <section>
-          <h2><a href="shapes">Shapes</a></h2>
-          <p>Keys</p>
-          <ul>
-            <li>CSS Transform</li>
-            <li>CSS Positining</li>
-          </ul>
-    </main>
+  <header>
+    <h1>¡Hola!</h1>
+  </header>
+  <main class="container">
+    <p>Welcome to my labcase!</p>
+    <p>Here are some ideas I've been tweaking with. Take whatever you find useful!</p>
+    <section>
+      <h2><a href="shapes">Shapes</a></h2>
+      <p>Keys</p>
+      <ul>
+        <li>CSS Transform</li>
+        <li>CSS Positining</li>
+      </ul>
+  </main>
 </body>
 
 </html>
