--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="/labcase/favicon-16x16.png">
   <link rel="manifest" href="/labcase/site.webmanifest">
   <link rel="mask-icon" href="/labcase/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="stylesheet" href="style.css">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 </head>
