--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -15,6 +15,8 @@
         <li><a href="https://chords.lacuerda.net/c_tangana/los_tontos.shtml">C. Tangana - Los tontos</a></li>
         <li><a href="https://chords.lacuerda.net/c_tangana/tu_me_dejaste_de_querer.shtml">C. Tangana - Tú me dejaste de querer</a></li>
         <li><a href="https://genius.com/C-tangana-and-toquinho-comerte-entera-lyrics">C. Tangana - Comerte entera</a></li>
+        <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/guantanamera-3.shtml">Guitarricadelafuente - Guantanamera</a></li>
+        <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/ya_mi_mama_me_decia.shtml">Guitarricadelafuente - Ya mi mama me decía</a></li>
         <li><a href="https://chords.lacuerda.net/juanito_makande/ninia_voladora.shtml">Juanito Makandé - Niña voladora</a></li>
         <li><a href="https://chords.lacuerda.net/delinquentes/a_la_luz_del_lorenzo.shtml">Los Delinqüentes - A la luz del Lorenzo</a></li>
         <li><a href="https://chords.lacuerda.net/delincuentes/el_aire_de_la_calle.shtml">Los Delinqüentes - El aire de la calle</a></li>
