bad tag closing

--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -106,14 +106,12 @@
                 <li><a href="https://chords.lacuerda.net/extremoduro/standby-4.shtml">Stand By</a></li>
             </ul>
         </li>
-        <li class="rep__artist"><span>Guitarricadelafuente<span>
-                    <ul class="rep__sublist">
-                        <li><a
-                                href="https://acordes.lacuerda.net/guitarricadelafuente/guantanamera-3.shtml">Guantanamera</a>
-                        </li>
-                        <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/ya_mi_mama_me_decia.shtml">Ya mi
-                                mama me decía</a></li>
-                    </ul>
+        <li class="rep__artist"><span>Guitarricadelafuente</span>
+            <ul class="rep__sublist">
+                <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/guantanamera-3.shtml">Guantanamera</a>
+                </li>
+                <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/ya_mi_mama_me_decia.shtml">Ya mi mama me decía</a></li>
+            </ul>
         </li>
         <li class="rep__artist"><span>Juanito Makandé</span>
             <ul class="rep__sublist">
@@ -130,7 +128,8 @@
         </li>
         <li class="rep__artist"><span>Ray Heredia</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/jose_el_frances/la_alegria_de_vivir-2.shtml">Alegría de vivir</a></li>
+                <li><a href="https://chords.lacuerda.net/jose_el_frances/la_alegria_de_vivir-2.shtml">Alegría de
+                        vivir</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Triana</span>
