feat: radiohead, dias raros, qr

--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arsa</title>
+    <title>Repertorio</title>
     <link href="styles/style.css" rel="stylesheet">
 </head>
 
@@ -78,76 +78,101 @@
     <ul id="list" class="rep__list">
         <li class="rep__artist"><span>Astola</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/alejandro_astola/ermitanio-2.shtml">Ermitaño</a></li>
+                <li><a target="_blank"
+                        href="https://chords.lacuerda.net/alejandro_astola/ermitanio-2.shtml">Ermitaño</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Chinitito</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/musica_de_tv/chinitito__chupala.shtml">Chúpala</a></li>
+                <li><a target="_blank"
+                        href="https://chords.lacuerda.net/musica_de_tv/chinitito__chupala.shtml">Chúpala</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>C. Tangana</span>
             <ul class="rep__sublist">
-                <li><a href="https://genius.com/C-tangana-and-toquinho-comerte-entera-lyrics">Comerte entera</a>
+                <li><a target="_blank" href="https://genius.com/C-tangana-and-toquinho-comerte-entera-lyrics">Comerte
+                        entera</a>
                 </li>
-                <li><a href="https://chords.lacuerda.net/c_tangana/los_tontos.shtml">Los tontos</a></li>
-                <li><a href="https://chords.lacuerda.net/c_tangana/me_maten.shtml">Me maten</a></li>
-                <li><a href="https://chords.lacuerda.net/c_tangana/tu_me_dejaste_de_querer.shtml">Tú me dejaste de
+                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/los_tontos.shtml">Los tontos</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/me_maten.shtml">Me maten</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/tu_me_dejaste_de_querer.shtml">Tú me
+                        dejaste de
                         querer</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Extremoduro</span>
             <ul class="rep__sublist">
-                <li><a href="https://acordes.lacuerda.net/extremoduro/ama_ama_y_ensancha_el_alma.shtml">Ama, ama,
+                <li><a target="_blank"
+                        href="https://acordes.lacuerda.net/extremoduro/ama_ama_y_ensancha_el_alma.shtml">Ama, ama,
                         ama y ensancha el alma</a></li>
-                <li><a href="https://chords.lacuerda.net/extremoduro/la_vereda_de_la_puerta-2.shtml">La vereda de la
+                <li><a target="_blank" href="https://chords.lacuerda.net/extremoduro/la_vereda_de_la_puerta-2.shtml">La
+                        vereda de la
                         puerta de atrás</a></li>
-                <li><a href="https://chords.lacuerda.net/extremoduro/si_te_vas.shtml">Si te vas</a></li>
-                <li><a href="https://chords.lacuerda.net/extremoduro/standby-4.shtml">Stand By</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/extremoduro/si_te_vas.shtml">Si te vas</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/extremoduro/standby-4.shtml">Stand By</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Guitarricadelafuente</span>
             <ul class="rep__sublist">
-                <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/guantanamera-3.shtml">Guantanamera</a>
+                <li><a target="_blank"
+                        href="https://acordes.lacuerda.net/guitarricadelafuente/guantanamera-3.shtml">Guantanamera</a>
                 </li>
-                <li><a href="https://acordes.lacuerda.net/guitarricadelafuente/ya_mi_mama_me_decia.shtml">Ya mi mama me decía</a></li>
+                <li><a target="_blank"
+                        href="https://acordes.lacuerda.net/guitarricadelafuente/ya_mi_mama_me_decia.shtml">Ya mi mama me
+                        decía</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Juanito Makandé</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/juanito_makande/ninia_voladora.shtml">Niña voladora</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/juanito_makande/ninia_voladora.shtml">Niña
+                        voladora</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Los Delinqüentes</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/delinquentes/a_la_luz_del_lorenzo.shtml">A la luz del
+                <li><a target="_blank" href="https://chords.lacuerda.net/delinquentes/a_la_luz_del_lorenzo.shtml">A la
+                        luz del
                         Lorenzo</a></li>
-                <li><a href="https://chords.lacuerda.net/delincuentes/el_aire_de_la_calle.shtml">El aire de la calle</a>
+                <li><a target="_blank" href="https://chords.lacuerda.net/delincuentes/el_aire_de_la_calle.shtml">El aire
+                        de la calle</a>
                 </li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>Radiohead</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank" href="https://www.cifraclub.com/radiohead/karma-police/">Karma Police</a></li>
+                <li><a target="_blank" href="https://www.cifraclub.com/radiohead/no-surprises/">No surprises</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Ray Heredia</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/jose_el_frances/la_alegria_de_vivir-2.shtml">Alegría de
+                <li><a target="_blank"
+                        href="https://chords.lacuerda.net/jose_el_frances/la_alegria_de_vivir-2.shtml">Alegría de
                         vivir</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Triana</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/triana/senior_troncoso-2.shtml">Sr. Troncoso</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/triana/senior_troncoso-2.shtml">Sr.
+                        Troncoso</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Vetusta Morla</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/vetusta_morla/copenhague-2.shtml">Copenhague</a></li>
+                <li><a target="_blank"
+                        href="https://chords.lacuerda.net/vetusta_morla/copenhague-2.shtml">Copenhague</a></li>
+                <li><a target="_blank" href="https://acordes.lacuerda.net/vetusta_morla/los_dias_raros.shtml">Los días
+                        raros</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Melendi</span>
             <ul class="rep__sublist">
-                <li><a href="https://chords.lacuerda.net/melendi/novia_a_la_fuga.shtml">Novia a la fuga</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/melendi/novia_a_la_fuga.shtml">Novia a la
+                        fuga</a></li>
             </ul>
         </li>
     </ul>
+    <img style="margin: 16px" width="100" height="100" src="assets/qr-repertorio.png" alt="QR del enlace" />
 </body>
 
 </html>
