feat: kanka x2, salir

--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -96,8 +96,18 @@
                 <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/los_tontos.shtml">Los tontos</a></li>
                 <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/me_maten.shtml">Me maten</a></li>
                 <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/tu_me_dejaste_de_querer.shtml">Tú me
-                        dejaste de
-                        querer</a></li>
+                        dejaste de querer</a></li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>El Kanka</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank" href="https://genius.com/C-tangana-and-toquinho-comerte-entera-lyrics">Comerte
+                        entera</a>
+                </li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/los_tontos.shtml">Los tontos</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/me_maten.shtml">Me maten</a></li>
+                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/tu_me_dejaste_de_querer.shtml">Tú me
+                        dejaste de querer</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Extremoduro</span>
@@ -108,6 +118,7 @@
                 <li><a target="_blank" href="https://chords.lacuerda.net/extremoduro/la_vereda_de_la_puerta-2.shtml">La
                         vereda de la
                         puerta de atrás</a></li>
+                <li><a target="_blank" href="https://acordes.lacuerda.net/extremoduro/salir-5.shtml">Salir</a></li>
                 <li><a target="_blank" href="https://chords.lacuerda.net/extremoduro/si_te_vas.shtml">Si te vas</a></li>
                 <li><a target="_blank" href="https://chords.lacuerda.net/extremoduro/standby-4.shtml">Stand By</a></li>
             </ul>
@@ -163,12 +174,6 @@
                         href="https://chords.lacuerda.net/vetusta_morla/copenhague-2.shtml">Copenhague</a></li>
                 <li><a target="_blank" href="https://acordes.lacuerda.net/vetusta_morla/los_dias_raros.shtml">Los días
                         raros</a></li>
-            </ul>
-        </li>
-        <li class="rep__artist"><span>Melendi</span>
-            <ul class="rep__sublist">
-                <li><a target="_blank" href="https://chords.lacuerda.net/melendi/novia_a_la_fuga.shtml">Novia a la
-                        fuga</a></li>
             </ul>
         </li>
     </ul>
