fix: kanka bien

--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -101,13 +101,12 @@
         </li>
         <li class="rep__artist"><span>El Kanka</span>
             <ul class="rep__sublist">
-                <li><a target="_blank" href="https://genius.com/C-tangana-and-toquinho-comerte-entera-lyrics">Comerte
-                        entera</a>
+                <li><a target="_blank" href="https://acordes.lacuerda.net/kanka/canela_en_rama-4.shtml">Canela en
+                        rama</a>
                 </li>
-                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/los_tontos.shtml">Los tontos</a></li>
-                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/me_maten.shtml">Me maten</a></li>
-                <li><a target="_blank" href="https://chords.lacuerda.net/c_tangana/tu_me_dejaste_de_querer.shtml">Tú me
-                        dejaste de querer</a></li>
+                <li><a target="_blank" href="https://acordes.lacuerda.net/kanka/que_bello_es_vivir.shtml">Qué bello es
+                        vivir</a>
+                </li>
             </ul>
         </li>
         <li class="rep__artist"><span>Extremoduro</span>
