--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -99,6 +99,12 @@
                         dejaste de querer</a></li>
             </ul>
         </li>
+        <li class="rep__artist"><span>Elliot Smith</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/elliott-smith/say-yes-chords-930394">Say yes</a></li>
+            </ul>
+        </li>
         <li class="rep__artist"><span>El Kanka</span>
             <ul class="rep__sublist">
                 <li><a target="_blank" href="https://acordes.lacuerda.net/kanka/canela_en_rama-4.shtml">Canela en
@@ -161,6 +167,12 @@
                         vivir</a></li>
             </ul>
         </li>
+        <li class="rep__artist"><span>The Pixies</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/pixies/where-is-my-mind-chords-89446">Where is my mind</a></li>
+            </ul>
+        </li>
         <li class="rep__artist"><span>Triana</span>
             <ul class="rep__sublist">
                 <li><a target="_blank" href="https://chords.lacuerda.net/triana/senior_troncoso-2.shtml">Sr.
@@ -173,6 +185,12 @@
                         href="https://chords.lacuerda.net/vetusta_morla/copenhague-2.shtml">Copenhague</a></li>
                 <li><a target="_blank" href="https://acordes.lacuerda.net/vetusta_morla/los_dias_raros.shtml">Los días
                         raros</a></li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>Wilco</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/wilco/jesus-etc-chords-581246">Jesus Etc</a></li>
             </ul>
         </li>
     </ul>
