--- a/repertorio/index.html
+++ b/repertorio/index.html
@@ -82,12 +82,6 @@
                         href="https://chords.lacuerda.net/alejandro_astola/ermitanio-2.shtml">Ermitaño</a></li>
             </ul>
         </li>
-        <li class="rep__artist"><span>Chinitito</span>
-            <ul class="rep__sublist">
-                <li><a target="_blank"
-                        href="https://chords.lacuerda.net/musica_de_tv/chinitito__chupala.shtml">Chúpala</a></li>
-            </ul>
-        </li>
         <li class="rep__artist"><span>C. Tangana</span>
             <ul class="rep__sublist">
                 <li><a target="_blank" href="https://genius.com/C-tangana-and-toquinho-comerte-entera-lyrics">Comerte
@@ -99,10 +93,21 @@
                         dejaste de querer</a></li>
             </ul>
         </li>
-        <li class="rep__artist"><span>Elliot Smith</span>
+        <li class="rep__artist"><span>Chinitito</span>
             <ul class="rep__sublist">
                 <li><a target="_blank"
-                        href="https://tabs.ultimate-guitar.com/tab/elliott-smith/say-yes-chords-930394">Say yes</a></li>
+                        href="https://chords.lacuerda.net/musica_de_tv/chinitito__chupala.shtml">Chúpala</a></li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>Coldplay</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank" href="https://www.cifraclub.com/coldplay/sparks/">Sparks</a></li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>Damien Rice</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank"
+                        href="https://www.cifraclub.com/damien-rice/delicate/simplificada.html">Delicate</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>El Kanka</span>
@@ -112,6 +117,21 @@
                 </li>
                 <li><a target="_blank" href="https://acordes.lacuerda.net/kanka/que_bello_es_vivir.shtml">Qué bello es
                         vivir</a>
+                </li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>Elliot Smith</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/elliott-smith/between-the-bars-chords-364836">Between
+                        the bars</a>
+                </li>
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/elliott-smith/everything-reminds-me-of-her-chords-2504859">Everything
+                        reminds me of her</a>
+                </li>
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/elliott-smith/say-yes-chords-930394">Say yes</a>
                 </li>
             </ul>
         </li>
@@ -154,6 +174,13 @@
                 </li>
             </ul>
         </li>
+        <li class="rep__artist"><span>Pixies</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank"
+                        href="https://tabs.ultimate-guitar.com/tab/pixies/where-is-my-mind-chords-89446">Where is my
+                        mind?</a></li>
+            </ul>
+        </li>
         <li class="rep__artist"><span>Radiohead</span>
             <ul class="rep__sublist">
                 <li><a target="_blank" href="https://www.cifraclub.com/radiohead/karma-police/">Karma Police</a></li>
@@ -165,12 +192,6 @@
                 <li><a target="_blank"
                         href="https://chords.lacuerda.net/jose_el_frances/la_alegria_de_vivir-2.shtml">Alegría de
                         vivir</a></li>
-            </ul>
-        </li>
-        <li class="rep__artist"><span>The Pixies</span>
-            <ul class="rep__sublist">
-                <li><a target="_blank"
-                        href="https://tabs.ultimate-guitar.com/tab/pixies/where-is-my-mind-chords-89446">Where is my mind</a></li>
             </ul>
         </li>
         <li class="rep__artist"><span>Triana</span>
@@ -189,8 +210,13 @@
         </li>
         <li class="rep__artist"><span>Wilco</span>
             <ul class="rep__sublist">
-                <li><a target="_blank"
-                        href="https://tabs.ultimate-guitar.com/tab/wilco/jesus-etc-chords-581246">Jesus Etc</a></li>
+                <li><a target="_blank" href="https://tabs.ultimate-guitar.com/tab/wilco/jesus-etc-chords-581246">Jesus
+                        etc</a></li>
+            </ul>
+        </li>
+        <li class="rep__artist"><span>Xoel López</span>
+            <ul class="rep__sublist">
+                <li><a target="_blank" href="https://acordes.lacuerda.net/xoel_lopez/alma_de_oro">Alma de oro</a></li>
             </ul>
         </li>
     </ul>
